[package]
name = "westend-example"
version = "0.1.0"
edition = "2021"

[dependencies]
glob = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.1.4", features = ["derive"] }
log = "0.4.17"
env_logger = "0.10.0"
avro-rs = "0.13.0"
apache-avro = { version = "0.14.0", features = ["derive"] }
void = "1"
