[package]
name = "westend-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apache-avro = { version = "0.14.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
avro-rs = "0.13.0"
log = "0.4.17"
void = "1"
polars = "0.30.0"